--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -27,6 +27,14 @@
   border-top: 4px solid #c8c8c8;
   border-right: 4px solid #c8c8c8;
   border-bottom: 4px solid #969696;
+  padding: 4px;
+}
+#border-s {
+  border-left: 2px solid #969696;
+  border-top: 2px solid #c8c8c8;
+  border-right: 2px solid #c8c8c8;
+  border-bottom: 2px solid #969696;
+  padding: 2px;
 }
 
 div {
